Tried playing around with some stretch goals, didn't quite get there, it looks like my code breaks at line 46/72 sometimes. It feels like it might be a computer issue on my part, the number of succesful game iterations before breaking is random

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,4 +5,22 @@
 
 .clickable {
     cursor: pointer;
+    /* position: relative;
+    display: inline-block; */
 }
+
+/* .clickable img {
+    display: block;
+} */
+
+/* .popupCorrect {
+    color: white;
+    background-color: black;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    transform: translate(0, -50%);
+    text-align: center;
+
+} */
